# mlir-opt-wasm

./: .gitignore  flake.nix
.github/workflows/: pages.yml
src/: CMakeLists.txt  highlight.cpp  mlir-opt.cpp
web/: app.js  build.mjs  editor.js  index.html  pdl.html  pdl.js  serve.py  styles.css  sw.js
web/codemirror/: entry.js  package-lock.json  package.json
